--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -41,5 +41,13 @@
 				bottom: -65px;
 			}
 		}
+
+		.offer {
+
+			&__acupuncture-sentence-text {
+				max-width: 380px;
+				padding-right: 20px;
+			}
+		}
 	}
 }
