--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -8,10 +8,10 @@
 		}
 
 		&__desktop-nav {
-            position: relative;
+			position: relative;
 			display: flex;
 			list-style: none;
-            padding-right: 25px;
+			padding-right: 25px;
 		}
 
 		&__nav-item {
@@ -20,12 +20,12 @@
 			text-transform: uppercase;
 			font-size: 16px;
 			padding: 16px 13px;
-            margin: 0 6px;
+			margin: 0 6px;
 			text-decoration: none;
 			color: $black-text;
 			border-radius: 2px;
 			overflow: hidden;
-            transition: all .4s;
+			transition: all 0.4s;
 
 			&:hover {
 				color: $main-pink;
@@ -39,136 +39,136 @@
 				background-color: $main-pink;
 				bottom: 0px;
 				left: -65%;
-                transition: all .4s;
-                border-radius: 3px;
+				transition: all 0.4s;
+				border-radius: 3px;
 			}
 
-            &:hover::before {
-                left: 0px;
-            }
+			&:hover::before {
+				left: 0px;
+			}
 		}
 
 		&__burger-btn {
 			display: none;
 		}
 
-        &__media-bar {
-            display: flex;
-            box-shadow: 0 1px 5px -3px $black-text;
-            width: 100%;
-            height: 26px;
-            font-size: 14px;
-            color: $main-pink;
-        }
+		&__media-bar {
+			display: flex;
+			box-shadow: 0 1px 5px -3px $black-text;
+			width: 100%;
+			height: 26px;
+			font-size: 14px;
+			color: $main-pink;
+		}
 
-        .remove-media-bar {
-            animation: mediaBarAnim 1s ease forwards;
-        }
+		.remove-media-bar {
+			animation: mediaBarAnim 1s ease forwards;
+		}
 
-        .remove-media-bar-rev {
-            animation: mediaBarAnimRev 1s ease forwards;
-        }
+		.remove-media-bar-rev {
+			animation: mediaBarAnimRev 1s ease forwards;
+		}
 
-        &__media-bar-conitainer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 0 auto;
-            max-width: 1360px;
-            width: 100%;
-        }
+		&__media-bar-conitainer {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			margin: 0 auto;
+			max-width: 1360px;
+			width: 100%;
+		}
 
-        &__email-icon {
-            padding-right: 8px;
-        }
+		&__email-icon {
+			padding-right: 8px;
+		}
 
-        &__phone-icon {
-            padding-right: 8px;
-        }
+		&__phone-icon {
+			padding-right: 8px;
+		}
 
-        &__media-bar-text {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-right: 25px;
-        }
+		&__media-bar-text {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding-right: 25px;
+		}
 
-        &__center-social-media-icon {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+		&__center-social-media-icon {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 
-        &__socialmedia-square {
-            min-width: 16%;
-            min-height: 16px;
-        }
+		&__socialmedia-square {
+			min-width: 16%;
+			min-height: 16px;
+		}
 
-        &__link-phone {
-            font-weight: 700;
-            text-decoration: none;
-            color: $main-pink;
-            transition: .3s;
-            margin-right: 25px;
-            letter-spacing: 1px;
+		&__link-phone {
+			font-weight: 700;
+			text-decoration: none;
+			color: $main-pink;
+			transition: 0.3s;
+			margin-right: 25px;
+			letter-spacing: 1px;
 
-            &:hover {
-                color: $black-text;
-            }
-        }
+			&:hover {
+				color: $black-text;
+			}
+		}
 
-        &__link-email {
-            text-decoration: none;
-            color: $main-pink;
-            transition: .3s;
-            letter-spacing: 0.5px;
+		&__link-email {
+			text-decoration: none;
+			color: $main-pink;
+			transition: 0.3s;
+			letter-spacing: 0.5px;
 
-            &:hover {
-                color: $black-text;
-            }
-        }
+			&:hover {
+				color: $black-text;
+			}
+		}
 
-        &__center-social-media-icon-space {
-            margin-left: 480px;
-        }
+		&__center-social-media-icon-space {
+			margin-left: 480px;
+		}
 
-        &__social-meda-container {
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            min-width: 45px;
-        }
+		&__social-meda-container {
+			position: relative;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			min-width: 45px;
+		}
 
-        &__dropdown-menu-offer {
-            position: absolute;
-            box-shadow: 0 2px 8px -2px $black-text;
-            border-radius: 6px;
-            left: 103px;
-            padding: 20px;
-            background-color: $bg-white;
-            transition: all .4s;
-        }
+		&__dropdown-menu-offer {
+			position: absolute;
+			box-shadow: 0 2px 8px -2px $black-text;
+			border-radius: 6px;
+			left: 103px;
+			padding: 20px;
+			background-color: $bg-white;
+			transition: all 0.4s;
+		}
 
-        &__dropdown-menu-ul{
-            list-style: none;
-        }
+		&__dropdown-menu-ul {
+			list-style: none;
+		}
 
-        &__dropdown-menu-li{
-            padding: 20px 15px;
-            text-transform: uppercase;
-            position: relative;
+		&__dropdown-menu-li {
+			padding: 20px 15px;
+			text-transform: uppercase;
+			position: relative;
 			text-decoration: none;
 			color: $black-text;
 			border-radius: 2px;
 			overflow: hidden;
-            transition: all .4s;
+			transition: all 0.4s;
 
-            &:hover {
+			&:hover {
 				color: $main-pink;
 			}
 
-            &::before {
+			&::before {
 				content: '';
 				position: absolute;
 				width: 35%;
@@ -176,114 +176,115 @@
 				background-color: $main-pink;
 				bottom: 0px;
 				left: -40%;
-                transition: all .4s;
-                border-radius: 3px;
+				transition: all 0.4s;
+				border-radius: 3px;
 			}
 
-            &:hover::before {
-                left: 0px;
-            }
-        }
+			&:hover::before {
+				left: 0px;
+			}
+		}
 
-        &__dropdown-menu-offer-items{
-            text-decoration: none;
-        }
+		&__dropdown-menu-offer-items {
+			text-decoration: none;
+		}
 
-        &__mobile-menu-container {
-            display: none;
-        }
+		&__mobile-menu-container {
+			display: none;
+		}
 
-        &__mobile-menu-container-offer-submenu {
-            display: none;
-        }
+		&__mobile-menu-container-offer-submenu {
+			display: none;
+		}
 	}
 
-    .main {
-        scroll-margin-top: -300px;
-    
-        .rings {
-    
-            &__circle-one {
-                transform: translate(140%, 0%);
-            }
-            &__circle-two {
-                transform: translate(-50%, 0%);
-            }
-            &__circle-three {
-                transform: translate(-240%, 0%);	
-            }
-        }
+	.main {
+		scroll-margin-top: -300px;
 
-        .aboutme{
-            scroll-margin-top: -135px;
-            
-            &__box1 {
-                top: 210px;
-            }
+		.rings {
+			&__circle-one {
+				transform: translate(140%, 0%);
+			}
+			&__circle-two {
+				transform: translate(-50%, 0%);
+			}
+			&__circle-three {
+				transform: translate(-240%, 0%);
+			}
+		}
 
-            &__box-sentence {
-                position: relative;
-                width: 100%;
-                height: 800px;
-                background-image: url(../../dist/img/aboutme-bg1-big.jpg);
-                background-repeat: no-repeat;
-                background-position: 0% 120%;
-                @include flex-center;
-            }
+		.aboutme {
+			scroll-margin-top: -135px;
 
-            &__my-img-small {
-                display: none;
-            }
+			&__box1 {
+				top: 210px;
+			}
 
-            &__my-img-big {
-                display: none;
-            }
+			&__box-sentence {
+				position: relative;
+				width: 100%;
+				height: 800px;
+				background-image: url(../../dist/img/aboutme-bg1-big.jpg);
+				background-repeat: no-repeat;
+				background-position: 0% 120%;
+				@include flex-center;
+			}
 
-            &__box-sentence-inside {
-                position: relative;
-                left: 60px;
-                top: 70px;
-                width: 450px;
-            }
+			&__my-img-small {
+				display: none;
+			}
 
-            &__my-img-big {
-                display: flex;
-                position: absolute;
-                max-width: 100%;
-                height: auto;
-                right: 14%;
-                bottom: -100px;
-            }
-        }
+			&__my-img-big {
+				display: none;
+			}
 
-        .offer {
+			&__box-sentence-inside {
+				position: relative;
+				left: 60px;
+				top: 70px;
+				width: 450px;
+			}
 
-            &__acupuncture-offer-container {
-                display: flex;
-                flex-wrap: wrap;
-            }
+			&__my-img-big {
+				display: flex;
+				position: absolute;
+				max-width: 100%;
+				height: auto;
+				right: 14%;
+				bottom: -100px;
+			}
+		}
 
-            &__acupuncture-square {
-                width: 45%;
-                padding: 12px;
-                margin: 10px;
-                border-radius: 4px;
-            }
+		.offer {
+			&__acupuncture-offer-container {
+			    display: flex;
+			    flex-wrap: wrap;
+			}
 
-         
-            &__acupuncture-square4 {
-                height: 400px;
-                display: flex;
-                justify-content: flex-start;
-            }
+			&__acupuncture-square {
+			    width: 40%;
+			    padding: 12px;
+			    margin: 10px;
+			    border-radius: 4px;
+			}
 
-            &__acupuncture-square3 {
-                height: 400px;
-                display: flex;
-                justify-content: flex-start;
-            }
+			&__acupuncture-square4 {
+			    height: 400px;
+			    display: flex;
+			    justify-content: flex-start;
+			}
 
+			&__acupuncture-square3 {
+			    height: 400px;
+			    display: flex;
+			    justify-content: flex-start;
+			}
 
-        }
-    }
+            &__acupuncture-sentence-text {
+				max-width: 620px;
+				padding-right: 80px;
+			}
+
+		}
+	}
 }
