--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -819,10 +819,13 @@ body {
 			background-image: url(../../dist/img/akcesoria-spa-na-ciemnym-tle.jpg);
 			background-position: center;
 			background-size: cover;  
-			padding: 150px 0;
+			padding: 160px 0;
 			margin: 100px 0;
 			display: flex;
-			justify-content: flex-end;
+			// justify-content: flex-start;
+			background-attachment: fixed;  
+			flex-direction: column;
+			align-items: flex-end;
 		}
 
 		&__acupuncture-sentence-text {
@@ -893,6 +896,37 @@ body {
 		
 		.rotate-rev-offer-indication {
 			animation: rotateIndicationOffer-Rev 1s ease forwards;
+		}
+
+		&__acupuncture-sentence-WHO {
+			background-image: url(../../dist/img/sun-2571158_1280.jpg);
+			background-position: 40% 35%;
+			background-size: cover;  
+			padding: 160px 0;
+			margin: 100px 0;
+			display: flex;
+			justify-content: flex-end;
+			background-attachment: fixed;
+		}
+
+		&__acupuncture-sentence-text-WHO {
+			padding-top: 30px;
+			font-size: 15px;
+			text-decoration: underline; 
+		}
+
+		&__dietetics {
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		&__dietetics-text {
+			text-align: justify;    
+			margin: 0 14px;
+			line-height: 28px;
+			margin-top: 4px;
 		}
 	}
 }
