--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,7 +3,8 @@ $black-text: #333333;
 $main-pink: #f254bb;
 $yellow: #FAD075;
 $blue: #65ADF0;
-$CTA-green: #13b60b;
+$CTA-green: #51d03d;
+$green: #22e01866;
 $orange: #FACA8E;
 $h1-heading: #FFFFFF;
 $little-gray: #d0d0d0;
