--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -703,7 +703,7 @@ body {
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			margin-right: 15px;
+			// margin-right: 15px;
 			text-align: justify;
 		}
 	
@@ -776,7 +776,6 @@ body {
 			padding: 8px;
 			border-radius: 4px;
 			margin-top: 70px;
-			
 			width: 100%;
 		}
 
@@ -823,7 +822,7 @@ body {
 			margin: 100px 0;
 			display: flex;
 			// justify-content: flex-start;
-			background-attachment: fixed;  
+			// background-attachment: fixed;  
 			flex-direction: column;
 			align-items: flex-end;
 		}
@@ -864,7 +863,6 @@ body {
 			flex-direction: column;
 			overflow: hidden;
 			height: 212px; /* height !!!!!!!*/
-
 			transition: all .3s;
 		}
 
@@ -873,6 +871,7 @@ body {
 			margin-bottom: 60px;
 			display: flex;
 			justify-content: center;
+			margin-bottom: 200px;
 		}
 
 		&__indications-items-border-bottom-two-arrow {
@@ -899,25 +898,64 @@ body {
 		}
 
 		&__acupuncture-sentence-WHO {
-			background-image: url(../../dist/img/sun-2571158_1280.jpg);
+			background-image: url(../../dist/img/drzewo.jpg);
 			background-position: 40% 35%;
 			background-size: cover;  
-			padding: 160px 0;
+			padding: 180px 0;
 			margin: 100px 0;
 			display: flex;
-			justify-content: flex-end;
+			justify-content: flex-start;
 			background-attachment: fixed;
 		}
-
+		
 		&__acupuncture-sentence-text-WHO {
+			font-family: 'fira sans-italic';
+			font-weight: italic;
+			line-height: 28px;
+			letter-spacing: 2px;
+			font-size: 18px;
+			font-weight: bold;
 			padding-top: 30px;
-			font-size: 15px;
-			text-decoration: underline; 
+			font-size: 13px;
+			margin: 0px 0;
+			padding: 0 0 0 0;
+			color: $bg-white;
+			display: flex;
+			justify-content: flex-end;
+			margin-right: 25px;
+		}
+		
+		&__acupuncture-container-sentence-text {
+			background-color: #333333cd;
+			border-radius: 20px;
+			display: flex;
+			flex-direction: column;
+			margin-left: 10%;
+			width: 80%;
+		}
+
+		&__acupuncture-sentence-text-tree {
+			font-family: 'fira sans-italic';
+			font-weight: italic;
+			line-height: 28px;
+			letter-spacing: 2px;
+			font-size: 18px;
+			font-weight: bold;
+			color: $bg-white;
+			padding: 15px;
+			text-align: center;
 		}
 
 		&__dietetics {
 			display: flex;
-			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+			padding: 80px 0;
+		}
+
+		&__dietetics-box {
+			scroll-margin-top: 80px;
+			display: flex;
 			flex-direction: column;
 			align-items: center;
 		}
@@ -927,6 +965,107 @@ body {
 			margin: 0 14px;
 			line-height: 28px;
 			margin-top: 4px;
+			height: auto;
+		}
+
+		&__dietetics-bg {
+			background-image: url(../../dist/img/dietetics.jpg);
+			background-position: right;
+			background-repeat: no-repeat;
+		}
+
+		&__dietetics-icon-box {
+			margin: 60px 0;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+		}
+		
+		&__dietetics-icon-container {
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			flex-direction: column;
+		}
+
+		&__dietetics-icon-items-img {
+			transition: all .3s;
+		}
+
+		&__dietetics-icon-items {
+			width: 200px;
+			height: 200px;
+			background-color: $green;
+			margin: 5px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			border-radius: 20%;
+
+			
+			&:hover .offer__dietetics-icon-items-img {
+				scale: 0.8;
+			}
+		}
+
+		&__dietetics-icon-box-h4 {
+			margin-bottom: 40px;
+		}
+
+		&__dietetics-icon-items-text {
+			margin-top: 20px;
+			text-align: center;
+			font-weight: bold;
+		}
+
+		&__hipocrates-container {
+			margin: 40px 15px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		
+		&__hippocrates-text-box {
+			padding: 15px;
+			background-color: $bg-white;
+			border-radius: 20px;
+			margin-top: 10px;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-end;
+
+			font-family: 'fira sans-italic';
+			font-weight: italic;
+			color: $black-text;
+			line-height: 26px;
+			// letter-spacing: 1px;
+			font-size: 16px;
+			font-weight: bold;
+		}
+
+		&__hippocrates-text-hippocrates {
+			margin: 15px 80px 0 0;
+		}
+
+		&__hippocrates-text-hippocrates-sentence {
+			text-align: center;
+		}
+
+		&__herbal-medicine-text {
+			text-align: justify;    
+			margin: 0 14px;
+			line-height: 28px;
+			margin-top: 4px;
+			height: auto;
+		}
+
+		&__herbal-medicine-box {
+			scroll-margin-top: 80px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 		}
 	}
 }
