--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,10 +1,11 @@
 $bg-white: #f6f6f6;
+$bg-white-transparent: #f6f6f674;
 $black-text: #333333;
 $main-pink: #f254bb;
 $yellow: #FAD075;
 $blue: #65ADF0;
 $CTA-green: #51d03d;
-$green: #22e01866;
+$green: #29c83375;
 $orange: #FACA8E;
 $h1-heading: #FFFFFF;
 $little-gray: #d0d0d0;
