--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -778,6 +778,9 @@ body {
 			border-radius: 4px;
 			margin-top: 70px;
 			width: 100%;
+			// border-top: 1px solid $black-text;
+			// border-left: 1px solid $black-text;
+			// border-right: 1px solid $black-text;
 		}
 
 		&__indications-margin {
@@ -951,7 +954,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			padding: 80px 0;
+			padding: 0px 0 80px 0;
 		}
 
 		&__dietetics-box {
@@ -976,7 +979,7 @@ body {
 		}
 
 		&__dietetics-icon-box {
-			margin: 60px 0;
+			margin: 0 0 60px 0;
 			width: 100%;
 			display: flex;
 			align-items: center;
@@ -1093,6 +1096,7 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			margin-bottom: 70px;
 		}
 
 		&__chinese-medicine-img {
@@ -1120,6 +1124,117 @@ body {
 		}
 
 		&__chinese-medicine-img-desktop {
+			display: none;
+		}
+
+
+
+		&__massage-container {
+			margin-top: 100px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 70px;
+		}
+
+		&__massage-img {
+			margin-top: 40px;
+			height: auto;
+			width: 100%; 
+			min-width: 240px;   
+			border-radius: 30px;
+			padding: 0 8px;
+		}
+
+		&__massage-text {
+			text-align: justify;    
+			margin: 0 14px;
+			line-height: 28px;
+			margin-top: 4px;
+			height: auto;
+		}
+
+		&__massage-box {
+			scroll-margin-top: 80px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		&__massage-img-desktop {
+			display: none;
+		}
+
+
+		&__bubble-container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 80px;
+		}
+
+		&__bubble-img {
+			margin-top: 40px;
+			height: auto;
+			width: 100%; 
+			min-width: 240px;   
+			border-radius: 30px;
+			padding: 0 8px;
+		}
+
+		&__bubble-text {
+			text-align: justify; 
+			margin: 0 14px;
+			line-height: 28px;
+			margin-top: 4px;
+			height: auto;
+		}
+
+		&__bubble-text-padding {
+			padding-bottom: 15px;
+		}
+
+		&__bubble-box {
+			scroll-margin-top: 80px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+
+		&__heat-therapy-container {
+			margin-top: 100px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 70px;
+		}
+
+		&__heat-therapy-img {
+			margin-top: 40px;
+			height: auto;
+			width: 100%; 
+			min-width: 240px;   
+			border-radius: 30px;
+			padding: 0 8px;
+		}
+
+		&__heat-therapy-text {
+			text-align: justify;    
+			margin: 0 14px;
+			line-height: 28px;
+			margin-top: 4px;
+			height: auto;
+		}
+
+		&__heat-therapy-box {
+			scroll-margin-top: 80px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
+		&__heat-therapy-img-desktop {
 			display: none;
 		}
 	}
