--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -48,6 +48,12 @@
 				max-width: 380px;
 				padding-right: 20px;
 			}
+
+			&__acupuncture-square2 {
+				width: 500px;
+				height: 500px;
+				background-position: top left;
+			}
 		}
 	}
 }
