--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,3 +11,5 @@ $orange: #FACA8E;
 $h1-heading: #FFFFFF;
 $little-gray: #d0d0d0;
 $little-white-section: #ececec;
+$white-table-price-list: white;
+$little-white-table-price-list: rgb(238, 238, 238);
