--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -55,5 +55,25 @@
 				background-position: top left;
 			}
 		}
+
+		.price-list {
+			background-color: $bg-white;
+	
+			&__table {
+				font-size: 13px;
+			}
+		}
+
+		.faq {
+			&__question-faq {
+				font-size: 14px;
+			}
+			
+			&__answer-faq {
+				font-size: 14px;
+			}
+		}
 	}
+
+
 }
