--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -239,6 +239,14 @@
 			&__answer-faq {
 				font-size: 15px;
 			}
+
+            &__faq-box {
+				height: 38px;
+			}
+
+			&__panel-faq {
+				line-height: 21px;
+			}
 		}
 	}
 }
