--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -13,3 +13,4 @@ $little-gray: #d0d0d0;
 $little-white-section: #ececec;
 $white-table-price-list: white;
 $little-white-table-price-list: rgb(238, 238, 238);
+$blog: #e0dfdf;
