--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -72,6 +72,14 @@
 			&__answer-faq {
 				font-size: 14px;
 			}
+
+			&__faq-box {
+				height: 45px;
+			}
+
+			&__panel-faq {
+				line-height: 21px;
+			}
 		}
 	}
 
