--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -67,6 +67,8 @@ body {
 	animation: resizeDesktopLogoRevv 0.8s linear forwards;
 }
 
+
+
 .nav {
 	position: fixed;
 	width: 100%;
@@ -494,6 +496,7 @@ body {
 		}
 	}
 
+
 	.aboutme {
 		scroll-margin-top: -70px;
 		display: flex;
@@ -658,6 +661,17 @@ body {
 		&__span-bold {
 			font-weight: 700;
 		}
+
+		&__download-link {
+			text-decoration: none;
+			color: $black-text;
+			transition: all .3s;
+
+			&:hover {
+				color: $main-pink;
+			}
+		}
+
 
 		.show-panel {
 			animation: showEducationList 0.3s ease-in forwards;
@@ -1330,8 +1344,6 @@ body {
 			&:hover {
 				background-color: rgb(234, 238, 231);
 			}
-
-
 		}
 
 		&__tbody-row-items {
@@ -1354,7 +1366,6 @@ body {
 		&__svg-bottom {
 			vertical-align: bottom;
 		}
-		
 	}
 
 	.blog {
@@ -1372,30 +1383,81 @@ body {
 			flex-wrap: wrap;
 			justify-content: center;
 		}
-		
-		&__box{
+
+		&__box {
 			width: 270px;
 			height: 400px;
-			background-color: $blog;
+			background-color: $little-white-section;
+			border: 1px solid $little-gray;
 			margin: 15px;
 			border-radius: 8px;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			overflow: hidden;
+			box-shadow: 2px 3px 6px $little-gray;
+			transition: all .3s;
+			
+			&:hover {
+				box-shadow: 2px 3px 6px $black-text;
+				scale: 1.02;
+			}
 		}
 
 		&__box-img {
-			width: 90%;
-			height: 60%;
+			min-width: 245px;
+			min-height: 190px;
 			margin: 10px;
-			background-color: #ee8f8f;
+			border-radius: 8px;
+			background-color: #30e20d;
+			position: relative;
+		}
+
+		&__box-img-item {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: top;
 		}
 
 		&__box-text {
 			width: 90%;
 			height: 40%;
 			margin: 10px;
+			text-align: justify;
+			font-size: 13px;
+			line-height: 19px;
+		}
 
+		&__box-text-title {
+			margin-bottom: 10px;
+		}
+
+		&__box-read-more {
+			width: 100%;
+			height: auto;
+			display: flex;
+			justify-content: flex-end;
+		}
+
+		&__box-read-more-text {
+			padding: 0 14px 14px 0 0;
+			font-size: 13px;
+			font-size: 15px;
+			font-family: fira sans-italic;
+		}
+
+		&__box-read-more-link {
+			text-decoration: none;
+			color: $black-text;
+			transition: all 0.3s;
+
+			&:hover {
+				color: $main-pink;
+			}
 		}
 	}
 
@@ -1464,7 +1526,7 @@ body {
 			line-height: 19px;
 			background-color: $bg-offer-section;
 		}
-		
+
 		&__h3-faq-svg-icon {
 			margin: 0 10px;
 			transition: all 0.3s;
@@ -1484,7 +1546,7 @@ body {
 			pointer-events: none;
 			font-size: 14px;
 		}
-		
+
 		&__answer-faq {
 			margin: 10px 0px;
 			font-size: 14px;
@@ -1514,7 +1576,7 @@ body {
 			align-items: center;
 			margin-bottom: 50px;
 		}
-		
+
 		&__svg-bottom-section {
 			vertical-align: bottom;
 		}
@@ -1523,15 +1585,11 @@ body {
 			display: block;
 		}
 	}
-
-
 }
 
 .footer {
 	height: 200px;
 	background-color: #5d5d5d;
-
-
 }
 
 @import './small';
