--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -302,4 +302,13 @@
             width: 68%;
         }
     }
+
+    .contact {
+        &__box-map-container {
+            display: flex;
+            justify-content: center;
+			width: 100%;
+		}
+    }
+
 }
