--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -10,6 +10,7 @@ $green: #29c83375;
 $orange: #FACA8E;
 $h1-heading: #FFFFFF;
 $little-gray: #d0d0d0;
+$little-gray-darker: #bcbcbc;
 $little-white-section: #ececec;
 $white-table-price-list: white;
 $little-white-table-price-list: rgb(238, 238, 238);
